--- a/Docker/docker-compose.yaml
+++ b/Docker/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
 
   api:
     container_name: evolution_api
-    image: atendai/evolution-api
+    image: atendai/evolution-api:latest
     restart: always
     ports:
       - 8080:8080
